--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="261256624171-l3dlqt9tqjitpmfdu8fl73ab6e7def0u.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platfom.js" async defer></script>
-    <title>Document</title>
+    <title>google-signin</title>
 </head>
 <body>
     <h1>Hey buddy</h1>
